--- a/global.css
+++ b/global.css
@@ -7,6 +7,7 @@ html,
 body {
     font-family: sans-serif;
     padding: 0;
+    width: 100%;
 }
 
 a {
@@ -68,6 +69,7 @@ div.nav-button {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    text-align: center;
 }
 
 div.nav-button:hover {
