--- a/global.css
+++ b/global.css
@@ -10,6 +10,11 @@ body {
     width: 100%;
 }
 
+body {
+    max-height: 0%;
+    transition: max-height 2s ease-out;
+}
+
 a {
     filter: saturate(50);
 }
