--- a/global.css
+++ b/global.css
@@ -43,7 +43,7 @@ sup>a {
 
 object#nav-object {
     height: 48px;
-    width: 100vw;
+    width: calc(100vw - 16px);
     position: fixed;
     inset: 0;
     border-radius: 0 0 0.5rem 0.5rem;
